Updated items and text in the components page

--- a/src/pug/alpakka.pug
+++ b/src/pug/alpakka.pug
@@ -38,9 +38,7 @@ block page
       h2 Assemble it your way
       p Pick your favorite components and materials, and put together your dream controller. Its modular design makes it #[em easy to assemble] and to modify every aspect.
       p Build the reference design, use community mods, or modify it yourself.
-      //- p The Alpakka reference hardware needs a PCB (board), the front and back cases, buttons, triggers, and the touch sensitive hexagon.
-      p At the moment the only way to get an Alpakka is to build it yourself with a 3D printer, to #[+a('/press') Request a Review Unit] for free, or to #[+a('/contribute') Become a Tester]
-      p See the list of #[+a('alpakka/components') Components] and materials.
+      p Check the list of #[+a('alpakka/components') Components] to see all the required parts and materials, and get them either from 3rd-party suppliers or directly from the #[+ax('https://inputlabs.squarespace.com') Input Labs Distribution] shop.
 
     div.box
       mixin done(state)
