Added a new set of community pictures

--- a/src/pug/contribute/gallery_community.pug
+++ b/src/pug/contribute/gallery_community.pug
@@ -12,35 +12,63 @@ block page
         img(src=src)
 
   div.boxes.grid
+      +boximg('/static/community/community_black_blue_stand.jpg')
       +boximg('/static/community/community_purple_pair.jpg')
-      +boximg('/static/community/community_tux_deck.jpg')
-      +boximg('/static/community/community_black_turq.jpg')
+      +boximg('/static/community/community_white_gold.jpg')
+
+      +boximg('/static/community/community_blue_pink_trio.jpg')
       +boximg('/static/community/community_silver_green.jpg')
+      +boximg('/static/community/community_gold_black.jpg')
+
+      +boximg('/static/community/community_holo.jpg')
+      +boximg('/static/community/community_black_orange_2.jpg')
+      +boximg('/static/community/community_metal_thumbstick.jpg')
+
+      +boximg('/static/community/community_pink_plush.jpg')
+      +boximg('/static/community/community_black_white_half.jpg')
+      +boximg('/static/community/community_black_round.jpg')
+
+      +boximg('/static/community/community_silver_pair.jpg')
       +boximg('/static/community/community_blue_lime.jpg')
       +boximg('/static/community/community_lime_pair.jpg')
-      +boximg('/static/community/community_black_purple.jpg')
-      +boximg('/static/community/community_silver_pair.jpg')
-      +boximg('/static/community/community_black_orange.jpg')
-      +boximg('/static/community/community_black_copper.jpg')
+
+      +boximg('/static/community/community_tux_deck.jpg')
       +boximg('/static/community/community_trans.jpg')
-      +boximg('/static/community/community_black_yellow.jpg')
-      +boximg('/static/community/community_white.jpg')
-      +boximg('/static/community/community_purple.jpg')
-      +boximg('/static/community/community_black_red.jpg')
+      +boximg('/static/community/community_black_purple.jpg')
+
+      +boximg('/static/community/community_black_copper.jpg')
       +boximg('/static/community/community_black_turq2.jpg')
       +boximg('/static/community/community_turq.jpg')
-      +boximg('/static/community/community_white2.jpg')
+
       +boximg('/static/community/community_green_pair.jpg')
       +boximg('/static/community/community_white3.jpg')
-      +boximg('/static/community/community_wood.jpg')
       +boximg('/static/community/community_turq2.jpg')
+
       +boximg('/static/community/community_black_lime.jpg')
+      +boximg('/static/community/community_holo_hex.jpg')
+      +boximg('/static/community/community_green_neon.jpg')
+
       +boximg('/static/community/community_black_blue.jpg')
       +boximg('/static/community/community_purple_pink.jpg')
       +boximg('/static/community/community_turq_mod.jpg')
-      +boximg('/static/community/community_holo.jpg')
+
       +boximg('/static/community/community_white_red.jpg')
       +boximg('/static/community/community_black_poly.jpg')
+      +boximg('/static/community/community_baseball_cap.jpg')
+
+
+
+
+
+      //- +boximg('/static/community/community_purple.jpg')
+      //- +boximg('/static/community/community_wood.jpg')
+      //- +boximg('/static/community/community_white2.jpg')
+      //- +boximg('/static/community/community_black_orange.jpg')
+      //- +boximg('/static/community/community_black_turq.jpg')
+      //- +boximg('/static/community/community_black_yellow.jpg')
+      //- +boximg('/static/community/community_white.jpg')
+      //- +boximg('/static/community/community_black_red.jpg')
+
       +boximglink(
         '/static/img/alpakka_black_silver_top.jpg',
         '/alpakka/gallery',
