--- a/src/pug/blog/report_24.pug
+++ b/src/pug/blog/report_24.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #24
-  +news_header('29 July 2024', 'report_23', '')
+  +news_header('29 July 2024', 'report_23', 'report_25')
 
   h3 More 3D models in build123d
   p We published a new iteration of the Alpakka 3D-models with the #[+ax(org.cad_release+'0.97.0') c0.97.0] release, continuing the migration from Blender to #[+ax('https://build123d.readthedocs.io') build123d] that we mentioned in #[+a('report_22') report 22].
