Updated Cloudflare privacy policy, Removed Firebase deploy leftovers, Define canonical always

--- a/src/pug/policies/privacy.pug
+++ b/src/pug/policies/privacy.pug
@@ -25,13 +25,13 @@ block content
         li Personal Information collected: version and agent of the web browser, approximate location, what pages are visited, referral link, outbound links, and how the users interact with the Site.
         li More details at: #[+ax('https://plausible.io/data-policy') https://plausible.io/data-policy].
   ul
-    li Logs on content delively network service
+    li Logs on Content Delively Network service
       ul
-        li Purpose of collection: Firebase Hosting uses IP addresses of incoming requests to detect abuse and provide customers with usage data.
+        li Purpose of collection: Cloudflare uses data of incoming requests to detect abuse and provide customers with usage data.
         li Source of collection: collected automatically when data is transferred to you.
-        li Disclosure for a business purpose: data kept by #[+ax('https://firebase.google.com') Firebase], only shared with Us if manually requested.
-        li Personal Information collected: IP address.
-        li More details at: #[+ax('https://firebase.google.com/support/privacy/') https://firebase.google.com/support/privacy].
+        li Disclosure for a business purpose: data kept by #[+ax('https://www.cloudflare.com') Cloudflare], only shared with Us if manually requested.
+        li Personal Information collected: may include but is not limited to IP addresses, traffic routing data, system configuration information, and other information about traffic to and from Customers’ websites, devices, applications, and/or networks.
+        li More details at: #[+ax('https://www.cloudflare.com/en-gb/privacypolicy') https://www.cloudflare.com/en-gb/privacypolicy].
 
   hr
   h3 Sharing Personal Information
