--- a/src/pug/policies/privacy.pug
+++ b/src/pug/policies/privacy.pug
@@ -27,7 +27,7 @@ block content
   ul
     li Logs on Content Delively Network service
       ul
-        li Purpose of collection: Cloudflare uses data of incoming requests to detect abuse and provide customers with usage data.
+        li Purpose of collection: Cloudflare uses data of incoming requests to detect abuse and provide customers with usage metrics.
         li Source of collection: collected automatically when data is transferred to you.
         li Disclosure for a business purpose: data kept by #[+ax('https://www.cloudflare.com') Cloudflare], only shared with Us if manually requested.
         li Personal Information collected: may include but is not limited to IP addresses, traffic routing data, system configuration information, and other information about traffic to and from Customers’ websites, devices, applications, and/or networks.
@@ -57,7 +57,7 @@ block content
   h4 Automatic decision-making
   p If you are a resident of the EEA, you have the right to object to processing based solely on automated decision-making (which includes profiling), when that decision-making has a legal effect on you or otherwise significantly affects you.
   p We DO NOT engage in fully automated decision-making that has a legal or otherwise significant effect using customer data.
-  p Our provider Firebase may use limited automated decision-making to prevent abuse, that does not have a legal or otherwise significant effect on you.
+  p Our provider Cloudflare may use limited automated decision-making to prevent abuse, that does not have a legal or otherwise significant effect on you.
 
   hr
   h3 Your rights
