Added custom profiles, Updated tune touch sensitivity

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -57,7 +57,7 @@ block page
         h3 Profiles
         div
           +wikilink('profiles') About profiles
-          +wikilink('profile_home') Home
+          +wikilink('profile_home') Home (shortcuts)
           +wikilink('profile_fps_fusion') FPS Fusion
           +wikilink('profile_fps_wasd') FPS WASD
           +wikilink('profile_console') Console
