Corrected steam guide button entry

--- a/src/pug/alpakka/manual/ctrl_app.pug
+++ b/src/pug/alpakka/manual/ctrl_app.pug
@@ -52,8 +52,8 @@ block content
       td
         div Hardware XInput device (app not required)
     tr
-      td Steam button shortcuts / button chords layout
-      td Home button shortcuts / home profile
+      td Steam button shortcuts / guide button chords layout
+      td Home button shortcuts (home profile)
     tr
       td Profile action sets and layers
       td
