3DOF added mention to local space

--- a/src/pug/alpakka/manual/ctrl_app.pug
+++ b/src/pug/alpakka/manual/ctrl_app.pug
@@ -138,7 +138,7 @@ block content
         +planned('https://github.com/inputlabs/alpakka_firmware/issues/104')
     tr
       td 3DOF to 2D modes: Yaw / Pitch / Roll
-      td Gyro axis: X / Y / Z
+      td Gyro axis: X / Y / Z (Local space)
     tr
       td 3DOF to 2D modes: World space
       td.dim #{notPlanned}
