Fix mix blend with grayscale in iOS 18 and MacOS 15

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ block page
 
     div.box.image.colored.blend
       a.img(href='/alpakka')
-        img(src='/static/img/index.jpg' width='100%' style='filter:grayscale(1)')
+        img(src='/static/img/index.jpg' width='100%')
 
     div.box
       h2 Do-It-Yourself, but don't do it alone
