--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ block page
 
     div.box.image.colored.blend
       a.img(href='/alpakka')
-        img(src='/static/img/index.jpg' width='100%')
+        img(src='/static/img/index-bw.jpg' width='100%')
 
     div.box
       h2 Do-It-Yourself, but don't do it alone
