--- a/src/pug/blog/report_25.pug
+++ b/src/pug/blog/report_25.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #25
-  +news_header('13 September 2024', 'report_24', '')
+  +news_header('13 September 2024', 'report_24', 'report_26')
 
   h3 Wireless RF prototypes 6 and 7
   p We continued experimenting with antenna performance by doing #[em "trim tuning"]: adding a long copper stub on the antenna's end. Taking measurements while progressive scratching off the copper and reducing the stub length.
