--- a/src/pug/blog/report_26.pug
+++ b/src/pug/blog/report_26.pug
@@ -44,3 +44,14 @@ block content
   p For our use cases, however, it is not necessary to know the remaining capacity precisely. The most important use-case is to warn the user before the battery is exhausted and the controller seizes to function correctly.
   p For this case, the drop in voltage on the right-side of the discharge curve is sufficient for a reasonable estimate.
   p Additionally, by using a boost-converter, in combination with the MCP73871, we can also take advantage of battery voltages below 3.3V, or even below 3.0V and give the user sufficient time to connect the controller to USB.
+
+  h3 Dongle
+  p In order to achieve a very low latency, the current wireless Alpakka communicates using ESP-Now. Accordingly, it requires a wireless dongle, which is based on the same daughter-board at the one in the wireless Alpakka.
+  p For the dongle case we attempted to retain the same style and low-poly design as the Alpakka itself.
+
+    +figure(
+    '',
+    'Dongle design',
+    '/static/blog/dongle_case.png',
+    'medium inline',
+  )
