--- a/src/pug/blog/report_26.pug
+++ b/src/pug/blog/report_26.pug
@@ -26,7 +26,7 @@ block content
     li estimating the amount of remaining energy based on the discharge curve of the energy store
 
   h4 Energy budget
-  p In this approach the energy / current, needed for various operations (e.g., checking the IMUs, getting the data to the microcontroller, calculating orientation changes, etc.) is estimates. This can then be deducted from the estimated capacity of the energy store, until the remaining charge is below set thresholds. According to those thresholds, various actions are taken, such as warning the user of a low battery, or going into an energy-saving mode.
+  p In this approach the energy / current, needed for various operations (e.g., checking the IMUs, getting the data to the micro-controller, calculating orientation changes, etc.) is estimates. This can then be deducted from the estimated capacity of the energy store, until the remaining charge is below set thresholds. According to those thresholds, various actions are taken, such as warning the user of a low battery, or going into an energy-saving mode.
   p While is can be significantly more accurate, this approach has a number of draw-backs. First of all, to work well, it requires very precise knowledge of the energy consumption of the various components and their corresponding operations. It also relies on information regarding the behavior of the energy store. Not merely it's capacity, but also how it behaves when higher currents are required.
   p This kind of information is not only very difficult to obtain, but can also change significantly with the environment in which the components operate. Varying temperatures, for example, have considerable impact on the current a given battery may be able to provide.
 
@@ -36,7 +36,7 @@ block content
     '',
     'Image background to be changed\
     Li-ion battery voltage and capacity decline with higher C rates. (Image: Richtek)',
-    '/static/blog/Battery-voltage-capacity-and-C-rate-768x409.webp',
+    '/static/blog/Battery-voltage-capacity-and-C-rate.png',
     'medium inline',
   )
   p This approach is usually less accurate, and it relies on knowing the discharge curve(s) of the battery. Such curves also depend on external factors, such as the temperature, as well as the current that is drawn by the system (C-rates).
@@ -45,13 +45,19 @@ block content
   p For this case, the drop in voltage on the right-side of the discharge curve is sufficient for a reasonable estimate.
   p Additionally, by using a boost-converter, in combination with the MCP73871, we can also take advantage of battery voltages below 3.3V, or even below 3.0V and give the user sufficient time to connect the controller to USB.
 
-  h3 Dongle
-  p In order to achieve a very low latency, the current wireless Alpakka communicates using ESP-Now. Accordingly, it requires a wireless dongle, which is based on the same daughter-board at the one in the wireless Alpakka.
+  h3 Dongle case
+  p In order to achieve a very low latency, the current wireless Alpakka communicates using #[+ax('https://github.com/espressif/esp-now') ESP-NOW]. Accordingly, it requires a wireless dongle, which is based on the same daughter-board as the one in the wireless Alpakka.
   p For the dongle case we attempted to retain the same style and low-poly design as the Alpakka itself.
 
-    +figure(
+  +figure(
     '',
     'Dongle design',
     '/static/blog/dongle_case.png',
+    'medium inline',
+  )
+  +figure(
+    '',
+    'Dongle prototype',
+    '/static/blog/dongle_case_proto.jpg',
     'medium inline',
   )
