added dongle-case design

--- a/src/pug/blog/report_26.pug
+++ b/src/pug/blog/report_26.pug
@@ -47,7 +47,7 @@ block content
 
   h3 Dongle case
   p In order to achieve a very low latency, the current wireless Alpakka communicates using #[+ax('https://github.com/espressif/esp-now') ESP-NOW]. Accordingly, it requires a wireless dongle, which is based on the same daughter-board as the one in the wireless Alpakka.
-  p For the dongle case we attempted to retain the same style and low-poly design as the Alpakka itself.
+  p For the dongle case we attempted to retain the same simple style and low-poly design as the Alpakka itself.
 
   +figure(
     '',
