Added Delta Force and CoD by NoMisZx and Make it Yourself book

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,12 @@ block content
   hr
 
   ul
+    li #[+ax('https://makeityourself.org/') Make it Yourself] #[em (pdf / book)] 1000 Useful Things to Make
+
+    li #[+ax('https://www.youtube.com/watch?v=OXCcPrCjVTk') NoMisZx] #[em (video)] Call of Duty Black Ops 6 AEK is crazy | Motion Controls (Gyro, No Aim Assist)
+
+    li #[+ax('https://www.youtube.com/watch?v=O0L5xHEIvA8') NoMisZx] #[em (video)] Delta Force: Hawk Ops Pre-Alpha Gyro-Gameplay
+
     li #[+ax('https://www.youtube.com/watch?v=xxRa807g54Q') RambleCan] #[em (video)] Remap All The Things!【Ctrl App / Alpakka Dual Gyro Controller】
     ul
       li: i "This was one of my major frustrations, just not being able to remap things easily on the controller"
@@ -38,7 +44,7 @@ block content
     li #[+ax('https://magpi.raspberrypi.com/issues/128') The MagPi — Issue 128, page 76] Alpakka: A DIY controller that can be used like a mouse or a gamepad with extra buttons.
     ul
       li: i "One of the reasons the controller is like this, though, is that you can also use it like a mouse thanks to advanced gyro functions"
-    
+
     li #[+ax('https://linuxgamecast.com/2023/02/input-labs-alpakka-the-true-diy-controller/') LinuxGameCast] #[em (video)] Alpakka - The BEST Open-Source Controller
     ul
       li: i "It cuts it very close to being perfect"
