--- a/src/pug/blog/report_26.pug
+++ b/src/pug/blog/report_26.pug
@@ -5,59 +5,119 @@ block append subtitle
 
 block content
   h2 Progress report #26
-  +news_header('08 November 2024', 'report_25', '')
+  +news_header('13 November 2024', 'report_25', '')
 
-  h3 Wireless Communications
-  p ESP32
+  h3 ESP-based wireless prototypes
+  p We created RF prototypes iterations #[em 8] and #[em 9], moving from a chip antenna to a pre-certified #[+ax('https://www.espressif.com/en/products/socs?id=ESP32-C2') Espressif ESP-8684-MINI-1] for communication, but still using the RP2040 as main MCU.
 
-  h3 Wireless Power
-  p While experimenting with the ESP32 for communication, we also tried to ensure that wireless power was working correctly. Previous prototypes established that the Microchip MCP73871 would work very nicely (see #[+a('report_22') reports 22] and #[+a('report_22') 23]) for us. Now we validated the various charging, discharging and low-battery use-cases.
+  p These small ESP modules feature a #[em single low-power RISC-V core] with a built-in antenna, and we are testing them as a very flexible programmable communication module, with the tradeoff of having to create our own "AT command" firmware from it, and flash it from the main MCU.
+
+  p We are glad to report that the  #[em RP2040<->ESP8684] communication, which is established via high frequency UART, have minimal impact on the latencies tested on the previous progress report (around 1.5 milliseconds), and retains an acceptable power usage (see table below). So it looks like a very viable candidate to move forward.
+
+  p Prototype 9 implemented fixes for the ESP integration, and added a front-angled reset button so the controller can be restarted with a bobby pin if necessary. Find the differences:
+
   +figure(
     '',
-    'Power measurement test',
+    'Core module proto 8',
+    '/static/blog/RF_proto_8.jpg',
+    'small inline',
+  )
+  +figure(
+    '',
+    'Core module proto 9',
+    '/static/blog/RF_proto_9.jpg',
+    'small inline',
+  )
+
+
+  h3 Dongle case
+  p The plan for the #[em core module] is to be reused on different devices, including the wireless dongle. But it would be weird to leave the module exposed and unprotected, so we designed a dongle case, keeping the minimalist and low-poly design as the Alpakka itself.
+  p While the design is not yet final (missing the pairing button), is pretty usable by now, and we already love it.
+
+  +figure(
+    '',
+    'Dongle case',
+    '/static/blog/dongle_case_1.jpg',
+    'small inline',
+  )
+  +figure(
+    '',
+    'Dongle with short cable',
+    '/static/blog/dongle_case_2.jpg',
+    'small inline',
+  )
+
+
+  h3 End-to-end prototypes
+  p We put together a full controller with the new core modules (one in the #[em controller] and another as a #[em dongle]), including a #[em 1200 mAh] battery. With the purpose of validating the wireless connection, battery life, and overall experience in a real-life environment with:
+  ul
+    li Real controller enclosing, antenna being between the PCB and the battery.
+    li Dongle with enclosing and behind the PC.
+    li Real living room with other wireless devices around, including plenty of neighbors' internet WLAN.
+
+  +figure(
+    '',
+    'Wireless controller E2E prototype',
+    '/static/blog/RF_E2E_4.jpg',
+    'medium inline',
+  )
+
+  +figure(
+    '',
+    'Power consumption testing',
     '/static/blog/wireless_E2E_2.jpg',
     'medium inline',
   )
 
-  p This includes estimating the state of the battery, e.g., in order to warn the user when the battery capacity becomes low.
-  p In principle there are two ways to achieve such an estimate:
-  ol
-    li deducting the amount of energy required for various operation from the budget of the energy store
-    li estimating the amount of remaining energy based on the discharge curve of the energy store
+  p Testing was performed by playing #[em Call of Duty BO6] and #[em Deep Rock Galactic], verifying that connection quality (latency, jitter, range and stability) was on par with the previous results on the ESP-C6 devkits. Wireless connectivity was achieved with #[+ax('https://www.espressif.com/en/solutions/low-power-solutions/esp-now') ESP-NOW] 2.4GHz wireless protocol.
 
-  h4 Energy budget
-  p In this approach the energy / current, needed for various operations (e.g., checking the IMUs, getting the data to the micro-controller, calculating orientation changes, etc.) is estimates. This can then be deducted from the estimated capacity of the energy store, until the remaining charge is below set thresholds. According to those thresholds, various actions are taken, such as warning the user of a low battery, or going into an energy-saving mode.
-  p While is can be significantly more accurate, this approach has a number of draw-backs. First of all, to work well, it requires very precise knowledge of the energy consumption of the various components and their corresponding operations. It also relies on information regarding the behavior of the energy store. Not merely it's capacity, but also how it behaves when higher currents are required.
-  p This kind of information is not only very difficult to obtain, but can also change significantly with the environment in which the components operate. Varying temperatures, for example, have considerable impact on the current a given battery may be able to provide.
+  p Regarding power, we made sure that the inclusion of the #[em ESP8684] wasn't raising the consumption too much (old ESP32 were infamous for using a lot of energy). Fortunately new Espressif modules are much better:
 
-  h4 Discharge curves
-  p The other approach is based on the relationship between the voltage a energy store can provide and it's remaining capacity.
-  +figure(
-    '',
-    'Image background to be changed\
-    Li-ion battery voltage and capacity decline with higher C rates. (Image: Richtek)',
-    '/static/blog/Battery-voltage-capacity-and-C-rate.png',
-    'medium inline',
-  )
-  p This approach is usually less accurate, and it relies on knowing the discharge curve(s) of the battery. Such curves also depend on external factors, such as the temperature, as well as the current that is drawn by the system (C-rates).
-  p More importantly, in the middle part of the discharge curve, the voltage is meant to remain very stable and as a result it can be very difficult to precisely distinguish between a 45% full battery and 55% full battery.
-  p For our use cases, however, it is not necessary to know the remaining capacity precisely. The most important use-case is to warn the user before the battery is exhausted and the controller seizes to function correctly.
-  p For this case, the drop in voltage on the right-side of the discharge curve is sufficient for a reasonable estimate.
-  p Additionally, by using a boost-converter, in combination with the MCP73871, we can also take advantage of battery voltages below 3.3V, or even below 3.0V and give the user sufficient time to connect the controller to USB.
+  p: b
+  table.inline.mono
+    tr
+      th
+        div Measured power
+        div consumption
+        div while gaming
+        div (250hz rate)
+      th Wired
+      th Wireless
+    tr
+      th RP2040 + IO + IMUs
+      td ~25 mA
+      td ~25 mA
+    tr
+      th ESP8684 + antenna
+      td
+      td ~70 mA
+    tr
+      th
+        div Expected
+        div battery life
+        div (1200 mAh)
+      td
+      td ~12 hours
 
-  h3 Dongle case
-  p In order to achieve a very low latency, the current wireless Alpakka communicates using #[+ax('https://github.com/espressif/esp-now') ESP-NOW]. Accordingly, it requires a wireless dongle, which is based on the same daughter-board as the one in the wireless Alpakka.
-  p For the dongle case we attempted to retain the same simple style and low-poly design as the Alpakka itself.
+  p On a real full-cycle test, battery discharged from full (4.12v) to almost empty (3.0v) in #[em 10 hours+]. Then the controller stopped working without giving a #[em low-battery alert], now that's a problem!.
 
-  +figure(
-    '',
-    'Dongle design',
-    '/static/blog/dongle_case.png',
-    'medium inline',
-  )
-  +figure(
-    '',
-    'Dongle prototype',
-    '/static/blog/dongle_case_proto.jpg',
-    'medium inline',
-  )
+  p Why? for context, there are several ways to estimate the remaining battery:
+  ul
+    li Measuring the voltage and make a calculation based on the discharge curve.
+    li Deducting the amount of energy based on the time the device has been running, keeping track of what it was doing.
+    li Setting a trigger after the voltage goes below some specific threshold.
+
+  p For simplicity (and to avoid wasting precious analog GPIO pins), we won't measure voltage and we won't know the exact % of battery remaining, but have only a #[em low-battery alert] provided by the battery management chip, which triggers at #[em 3.2v].
+
+  p We originally thought that not using a buck-boost converter was an acceptable approach, since there should be plenty of time between the low-battery alert at #[em 3.2v] and the #[em 2.7v] cutoff of the RP2040.
+
+  p The problem is that with the introduction of the #[em ESP8684] (which cutoffs much sooner at #[em 3.0v]), in combination with the low-battery alert not being very precise (anything in the #[em 2.95v ~ 3.25v] range), we got effectively no low-battery alert at all.
+
+  p The solution is "simple", we will add a buck-boost converter in the next prototype iteration, which will convert any voltage coming out from the battery management IC into 3.3v, solving the low-battery problem, and in theory allowing the controller to extract more battery juice all the way down to #[em ~2.5v], potentially extending the battery life a couple of hours.
+
+  p More software #[em optimizations] will be done later to extend the battery life, but 10~12 hours seems like a good start for a high performance controller such as the Alpakka.
+
+  p Overall, we consider these end-to-end prototypes and huge success.
+
+  hr
+  p Thanks for the support! 🤍 <br>- Michael and Marcos
